Update build_lib3.sh